# mega_vector

./: LICENSE.txt  README.md  pyproject.toml
mega_vector/: _Vector3.py  __init__.py  plotly.py
